# litemongo

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml
litemongo/: __init__.py  client.py  h5py_store.py  pytables_store.py  sqlite_store.py  stores.py  version.py
litemongo/_vendor/mongomock/: LICENSE  __init__.py  __init__.pyi  __version__.py  aggregate.py  codec_options.py  collection.py  database.py  filtering.py  gridfs.py  helpers.py  mongo_client.py  not_implemented.py  object_id.py  patch.py  read_preferences.py  results.py  store.py  write_concern.py
tests/: __init__.py  test_h5py_store.py  test_pytables_store.py  test_sqlite_store.py
